packages/react-components/src/components/Modal/Modal.module.scss
.modal-base {
  display: flex;
  position: relative;
  flex-direction: column;
  margin: auto;
  border-radius: var(--radius-3);
  box-shadow: 0 20px 60px 0 rgb(0 0 0 / 30%);
  background-color: var(--surface-primary-default);
  padding: var(--spacing-6) var(--spacing-7);
  max-width: 100%;
  height: fit-content;
  color: var(--content-basic-primary);

  &--full-space {
    padding: 0;
  }

  &__overlay {
    display: none;
    background-color: var(--surface-other-overlay);

    &--visible {
      display: flex;
    }

    &--labelled {
      padding-top: 64px;
    }
  }

  &__close {
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1;
    outline: none;
    border-style: none;
    box-shadow: none;
    background-color: transparent;
    cursor: pointer;
    padding: 0;
    width: 24px;
    min-width: 24px;
    height: 24px;
    color: var(--content-basic-secondary);

    &:hover {
      color: var(--content-basic-primary);
    }

    &:active,
    &:focus {
      border: 1px solid var(--action-primary-default);
    }

    &--label-type {
      position: initial;
      color: var(--content-invert-primary);

      &:hover,
      &:focus,
      &:active {
        background-color: transparent;
      }
    }
  }
}

.modal {
  &__body {
    box-sizing: border-box;
    display: flex;
    flex: 1;
    flex-direction: column;
    width: 100%;
    color: var(--content-basic-primary);
  }

  &__header {
    box-sizing: border-box;
    display: flex;
    position: relative;
    align-items: center;
    justify-content: space-between;
    padding-bottom: var(--spacing-5);
    width: 100%;
    color: var(--content-basic-primary);
  }

  &__label-header {
    display: flex;
    position: absolute;
    top: -52px;
    left: 0;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 40px;
  }

  &__heading {
    margin: 0;
    padding: 0;
    max-width: calc(100% - 32px);
    text-align: left;
    color: var(--content-basic-primary);
  }

  &__label-heading {
    color: var(--color-white);
  }

  &__footer {
    box-sizing: border-box;
    display: flex;
    justify-content: flex-end;
    padding-top: var(--spacing-5);
    width: 100%;
  }
}

